# microscopy_proc

./: 404.html  README.md  TransformParameters.0.txt  conda_env.yaml  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish_docs.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/examples/: batch_pipeline.md  single_pipeline.md
docs/docs/installation/: installing.md  running.md  uninstalling.md  updating.md
docs/docs/reference/: config_params_model.md  pipeline_funcs.md  proj_fp_model.md
docs/docs/tutorials/: configs.md  tutorial.md
docs/site/: index.html  objects.inv  sitemap.xml
docs/site/examples/: batch_pipeline.html
docs/site/figures/: Thumbs.db
docs/site/installation/: installing.html  running.html
docs/site/reference/: config_params_model.html  pipeline_funcs.html  proj_fp_model.html
docs/site/search/: search_index.js  search_index.json
docs/site/tutorials/: configs.html  tutorial.html
examples/: batch_pipeline.html  single_pipeline.html
figures/: figures.pptx
installation/: installing.html  running.html  uninstalling.html  updating.html
microscopy_proc/: __init__.py  constants.py
microscopy_proc/funcs/: batch_combine.py  batch_combine_funcs.py  cellc_funcs.py  cpu_arr_funcs.py  cpu_cellc_funcs.py  dask_funcs.py  elastix_funcs.py  gpu_arr_funcs.py  gpu_cellc_funcs.py  io_funcs.py  map_funcs.py  mask_funcs.py  post_funcs.py  post_funcs_dask.py  reg_funcs.py  tiff2zarr_funcs.py  tiff_to_zarr.py  tiff_to_zarr_funcs.py  tuning_evaluation_funcs.py  viewer_funcs.py  visual_check_funcs.py  visual_check_funcs_dask.py  visual_check_funcs_tiff.py
microscopy_proc/gui/: gui_funcs.py  main.py  page1_init.py  page2_config.py  page2_update.py  page3_import.py  page3_pipeline.py  page4_pipeline.py  page4_visualiser.py  page5_combine.py  page5_view.py  page6_combine.py  page_config.py  page_init_proj.py  page_pipeline.py  page_visualiser.py
microscopy_proc/pipeline/: pipeline.py  pipeline_tuning.py  visual_check.py
microscopy_proc/pipeline_funcs/: pipeline_funcs.py  pipeline_funcs_tuning.py  pipeline_tuning_funcs.py
microscopy_proc/pipelines/: abcd_rnd.py  all_pipeline.py  batch_combine.py  batch_pipeline.py  batch_pipeline2.py  batch_pipeline3.py  batch_pipeline4.py  cellc_pipeline copy.py  cellc_pipeline.py  check_df.py  make_example_imgs.py  make_zarr.py  map_pipeline.py  mask_batch_pipeline.py  mask_pipeline.py  pipeline.py  pipeline_funcs.py  post_pipeline.py  reg_pipeline.py  reg_pipeline2.py  rnd.py  rnd_dask.py  rnd_more.py  single_pipeline.py  tiff_to_zarr_pipeline.py  tiff_to_zarr_pipeline2.py  view_image.py  view_images.py  view_img.py  view_table.py  visual_check_pipeline.py
microscopy_proc/scripts/: batch_pipeline.py  gui.py  gui_funcs.py  make_project.py  project_gui.py  single_pipeline.py  view_img.py
microscopy_proc/templates/: batch_pipeline.py  run_pipeline.py  single_pipeline.py  view_img.py
microscopy_proc/utils/: config_params_model.py  cp_utils.py  dask_utils.py  diagnostics_utils.py  elastix_utils.py  io_utils.py  logging_utils.py  map_utils.py  misc_utils.py  multiproc_utils.py  proj_org_utils.py  reg_params_model.py  template_utils.py
microscopy_proc/viewer/: image_viewer.py  slice_viewer.py  table_viewer.py
reference/: config_params_model.html  pipeline_funcs.html  proj_fp_model.html
resources/annotation/: ccf_2015_25.nrrd  ccf_2016_25.nrrd  ccf_2017_25.nrrd  ccf_2017_25.tif
resources/reference/: ara_nissl_25.nrrd  ara_nissl_25.tif
search/: search_index.js  search_index.json
tutorials/: configs.html  pipeline.html  tutorial.html
(+3 files in other folders)
