[tool.poetry]
name = "microscopy-proc"
version = "0.1.0"
description = ""
authors = ["tlee08 <timothy.e.lee@sydney.edu.au>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
tifffile = "^2024.8.10"
numpy = "^1.26.4"                                       # "^2.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-image = "^0.24.0"
zarr = "^2.18.2"
dask = { version = "^2024.7.1", extras = ["complete"] }
graphviz = "^0.20.3"
# prefect = "^2.19.8"
natsort = "^8.4.0"
napari = { version = "^0.5.2", extras = ["all"] }
pydantic = "^2.8.2"
nibabel = "^5.2.1"
# GPU dependencies
# cupy-cuda12x = { version = "^13.3.0", optional = true }
dask-cuda = { version = "^24.8.2", optional = true }
# Elastix dependencies
simpleitk-simpleelastix = { version = "^2.4.0.dev67", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mkdocs-material = "^9.5.18"
mkdocstrings-python = "^1.9.2"
pytest = "^8.3.3"

[tool.poetry.extras]
# gpu = ["cupy-cuda12x", "dask-cuda"]
gpu = ["dask-cuda"]
elastix = ["simpleitk-simpleelastix"]

[tool.poetry.scripts]
microscopy_proc_gui = "microscopy_proc.gui.main:run_script"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
